--- a/app/styles/ui/_app.scss
+++ b/app/styles/ui/_app.scss
@@ -94,6 +94,7 @@
 
             color: var(--text-color);
             background-color: var(--box-selected-active-background-color);
+            cursor: copy;
           }
         }
       }
